--- a/lib/Baseliner/I18N/es.po
+++ b/lib/Baseliner/I18N/es.po
@@ -2183,15 +2183,56 @@ msgstr "Crear proyecto"
 msgid "Projects"
 msgstr "Proyectos"
 
+# lib/Baseliner/Controller/Daemon.pm (57)
+msgid "Daemon started"
+msgstr "Demonio iniciado"
 
+# lib/Baseliner/Controller/Daemon.pm (65)
+msgid "Daemon stopped"
+msgstr "Demonio parado"
 
+# lib/Baseliner/Controller/Daemon.pm (85)
+msgid "Daemon added"
+msgstr "Demonio añadido"
 
+# lib/Baseliner/Controller/Daemon.pm (89)
+msgid "Error adding Daemon: %1"
+msgstr "Error añadiendo Demonio"
 
+# lib/Baseliner/Controller/Daemon.pm (98)
+msgid "Daemon modified"
+msgstr "Demonio modificado"
 
+# lib/Baseliner/Controller/Daemon.pm (101)
+msgid "Error modifying Daemon: %1"
+msgstr "Error modificando Demonio"
 
+# lib/Baseliner/Controller/Daemon.pm (115)
+msgid "Daemon deleted"
+msgstr "Demonio borrado"
 
+# lib/Baseliner/Controller/Daemon.pm (118)
+msgid "Error deleting Daemon"
+msgstr "Error borrando Demonio"
 
+# root/comp/daemon_grid.js (85)
+msgid "Are you sure you want to turn off the daemon"
+msgstr "¿Está seguro de que quiere parar el demonio"
 
+# root/comp/daemon_grid.js (85)
+msgid "Are you sure you want to delete the daemon"
+msgstr "¿Está seguro de que quiere borrar el demonio"
 
+# root/comp/daemon_grid.js (167)
+msgid "Create daemon"
+msgstr "Crear demonio"
+
+# root/comp/daemon_grid.js (188)
+msgid "Edit daemon"
+msgstr "Editar demonio"
+
+# root/comp/daemon_grid.js (220)
+msgid "Not Active"
+msgstr "Desactivado"
 
 
