--- a/lib/Baseliner/I18N/es.po
+++ b/lib/Baseliner/I18N/es.po
@@ -1150,7 +1150,7 @@ msgid "RESUME"
 msgstr "Reiniciado"
 
 msgid "SUSPENDED"
-msgstr "Suspenso"
+msgstr "Suspendido"
 
 msgid "DONE"
 msgstr "Finalizado"
