--- a/lib/Baseliner/I18N/es.po
+++ b/lib/Baseliner/I18N/es.po
@@ -2740,6 +2740,9 @@ msgstr "%1 publicó un comentario el %2: %3"
 msgid "%1 deleted a comment on %2: %3"
 msgstr "%1 borró un comentario el %2: %3"
 
+msgid "File"
+msgstr "Fichero"
+
 msgid "Files"
 msgstr "Ficheros"
 
@@ -2748,3 +2751,13 @@ msgstr "Subir Fichero"
 
 msgid "Drop files here to upload"
 msgstr "Arrastre los fichero aquí para subirlos"
+
+msgid "Create view"
+msgstr "Crear vista"
+
+msgid "Delete view"
+msgstr "Borrar vista"
+
+msgid "Assign to"
+msgstr "Asignados"
+
