topic grid colors and statuses

--- a/lib/Baseliner/I18N/es.po
+++ b/lib/Baseliner/I18N/es.po
@@ -2668,10 +2668,6 @@ msgstr "Abiertas"
 msgid "Closed"
 msgstr "Cerradas"
 
-# root/comp/topic_grid.js (660)
-msgid "Closed"
-msgstr "Cerradas"
-
 # root/comp/topic_grid.js (938)
 msgid "Are you sure you want to delete the labels selected?"
 msgstr "¿Seguro que quiere borrar le etiqueta seleccionada?"
@@ -2761,3 +2757,26 @@ msgstr "Borrar vista"
 msgid "Assign to"
 msgstr "Asignados"
 
+msgid "select a category"
+msgstr "seleccione una categoría"
+
+msgid "select a priority"
+msgstr "seleccione una prioridad"
+
+msgid "categories"
+msgstr "categorías"
+
+msgid "priorities"
+msgstr "prioridades"
+
+msgid "statuses"
+msgstr "estados"
+
+msgid "labels"
+msgstr "etiquetas"
+
+msgid "Assigned To Me"
+msgstr "Assignadas a Mí"
+
+msgid "Created Today"
+msgstr "Creadas Hoy"
