lifecycle menu and folder

--- a/lib/Baseliner/I18N/es.po
+++ b/lib/Baseliner/I18N/es.po
@@ -2775,6 +2775,9 @@ msgstr "estados"
 msgid "labels"
 msgstr "etiquetas"
 
+msgid "New Folder"
+msgstr "Crear Carpeta"
+
 msgid "Assigned To Me"
 msgstr "Assignadas a Mí"
 
